--- a/package.json
+++ b/package.json
@@ -1,7 +1,22 @@
 {
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "express": "^4.19.2",
     "react-bootstrap": "^2.10.2",
     "react-icons": "^5.2.0"
-  }
+  },
+  "name": "bookshop",
+  "version": "1.0.0",
+  "description": "eCommerce application built with MERN stack",
+  "type": "module",
+  "main": "server.js",
+  "scripts": {
+    "start": "node backend/server.js"
+  },
+  "keywords": [
+    "Gerry",
+    "Liu"
+  ],
+  "author": "Gerry Liu",
+  "license": "ISC"
 }
