--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "express": "^4.19.2",
+    "mongoose": "^8.3.4",
     "react-bootstrap": "^2.10.2",
     "react-icons": "^5.2.0"
   },
