--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
     "colors": "^1.4.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.4",
     "react-bootstrap": "^2.10.2",
     "react-icons": "^5.2.0"
